--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nova
-version = 2014.1.1
+version = 2014.1.1_calico0.1
 summary = Cloud computing fabric controller
 description-file = 
 	README.rst
